log/build_2024-12-29_00-11-58/joy_sub/stderr.log
  File "/home/a/harurobo/install/joy_sub/lib/python3.10/site-packages/joy_sub/joy_sub.py", line 16
    def listener_callback(self,msg)    
                                       ^
SyntaxError: expected ':'

